<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondob"
    tools:context=".Home">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/iglesia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        />
    <TextView
        android:id="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="san jeronimo"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/botonhoteles"
        android:backgroundTint="@color/royalblue"
        android:text="@string/hoteles"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <Button
        android:id="@+id/botonrestaurante"
        android:backgroundTint="@color/royalblue"
        android:text="@string/restaurante"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonhoteles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        />

    <Button
        android:id="@+id/botonturismo"
        android:backgroundTint="@color/royalblue"
        android:text="@string/turismo"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonrestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        />

    <TextView
        android:id="@+id/bienenido"
        app:layout_constraintTop_toBottomOf="@id/botonturismo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/bienvenido"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/cliente"
        app:layout_constraintTop_toBottomOf="@id/bienenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="cliente"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintVertical_bias="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />



</androidx.constraintlayout.widget.ConstraintLayout>