<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/nombreturismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.05"
        />

    <TextView
        android:id="@+id/nombreturismocambiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LA CASA DE JUANITO"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombreturismo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.05"
        />

    <ImageView
        android:id="@+id/imagenturismo"
        android:layout_width="410dp"
        android:layout_height="300dp"
        android:src="@drawable/kanaloa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreturismo"
        app:layout_constraintVertical_bias="0.05"
        android:scaleType="fitXY"

        />
    <TextView
        android:id="@+id/contactotuismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imagenturismo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/contacto"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <TextView
        android:id="@+id/nombreContatoTurismoCambiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imagenturismo"
        app:layout_constraintStart_toEndOf="@+id/contactotuismo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="lucas perez"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <TextView
        android:id="@+id/telefonoturismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contactotuismo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/telefonos"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/telefonoCambianteTurismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nombreContatoTurismoCambiante"
        app:layout_constraintStart_toEndOf="@+id/telefonoturismo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="123456789"
        android:textStyle="bold"
        android:textSize="26dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.08" />

    <TextView
        android:id="@+id/precioTurismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/telefonoturismo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="$15000"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.08"
        />

</androidx.constraintlayout.widget.ConstraintLayout>